--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
     -->
-    <title>Baseball</title>
+    <title>Terrace Pi</title>
   </head>
   <body>
     <div id="root"></div>
